# ephemeral-blue

./: CMakeLists.txt  Dockerfile  README.md  makefile
ephemeral-blue/: CMakeLists.txt  compile_flags.txt  main.cpp  utility.cpp  verifier.cpp  verifier.hpp
snake-eye/: CMakeLists.txt  compile_flags.txt  main.cpp  severity.hpp  utility.hpp  verifier.cpp
